# k8s-example-service

./: Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg
deploy/helm/fastapi-k8s-example-app/: Chart.yaml  values.yaml
deploy/helm/fastapi-k8s-example-app/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
deploy/helm/fastapi-k8s-example-app/templates/tests/: test-connection.yaml
deploy/terraform/environment/: aws_ecr_repo.tf  providers.tf  variables.tf
src/: pyproject.toml
src/app/: main.py
src/app/api/: api.py  root.py
src/app/core/: config.py  events.py
src/tests/: test_main.py
